--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,5 +1,11 @@
 header {
   position: relative;
+  @media (max-width: 600px) {
+    height: 150px;
+  }
+  @media (max-width: 500px) {
+    height: 115px;
+  }
   div {
     display: flex;
     flex-direction: column;
@@ -18,9 +24,11 @@ header {
       padding: 15px;
       @media (max-width: 900px) {
         width: 250px;
+        padding: 10px;
       }
       @media (max-width: 500px) {
         width: 200px;
+        padding: 6px;
       }
     }
 
