--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -76,6 +76,7 @@
     div {
       display: flex;
       align-items: center;
+      justify-content: space-between;
       @media (max-width: 600px) {
         flex-direction: column;
       }
@@ -253,22 +254,34 @@
       }
     }
 
-    div {
+    > div {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding: 2% 40px;
 
       > div {
+        display: flex;
         flex-direction: row;
         align-items: flex-start;
+        margin-top: 30px;
 
         > div {
           flex-direction: column;
           justify-content: flex-start;
           width: 30%;
-          padding: 2%;
+          padding-right: 4%;
           margin: 0;
+          @media (max-width: 1100px) {
+            padding-right: 2%;
+          }
+          &:nth-last-child(1) {
+            padding-right: 0;
+          }
+          @media (max-width: 900px) {
+            padding-right: 0;
+          }
 
           h4,
           h5 {
@@ -440,15 +453,6 @@
           min-width: 300px;
           min-height: 300px;
         }
-        a {
-          display: block;
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          top: 0;
-        }
-
         iframe {
           width: 100%;
           height: 100%;
